--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,6 @@ description = "3D web visualization experiments"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "pygltflib>=1.16.2",
     "usd-core>=24.8",
 ]
